[package]
name = "patch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation", "Win32_Networking_WinSock", "Win32_System_Console", 
    "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug"
]